2005-11-22  Joel Brobecker  <brobecker@adacore.com>

	* top.c (print_gdb_version): Update copyright year.

2005-11-22  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Bump version number to 6.3.91 now that the first
	release candidate (6.3.90) has been made.

2005-11-22  Joel Brobecker  <brobecker@adacore.com>

	* README: Update last updated date and author.

2005-11-20  Mark Kettenis  <kettenis@gnu.org>

	* inf-ptrace.c (inf_ptrace_xfer_partial): Use PIOD_WRITE_I instead
	of PIOD_WRITE_D.

2005-11-18  Andrew Stubbs  <andrew.stubbs@st.com>

	* mi/mi-main.c (mi_load_progress): Ensure the use of the correct mi
	uiout for the duration of the function.

2005-11-18  Nick Roberts  <nickrob@snap.net.nz>

	* mi/gdb-mi.el (gdb-source-file-list): Declare.
	(gdbmi): Bind new functions.
	(gdbmi-var-list-children-handler, gdbmi-var-list-children-regexp):
	Handle string expressions properly.  Move "type" field into regexp.
	(gdbmi-var-update-regexp, gdbmi-var-update-handler): Handle string
	expressions properly.  Update speedbar.
	(gdbmi-breakpoints-buffer, gdb-stack-buffer, gdb-locals-buffer)
	(gdb-registers-buffer): Use def-gdb-auto-update-trigger instead of
	def-gdb-auto-updated-buffer as handlers is defined explicitly.
	(gdb-stack-list-locals-handler): Handle string expressions properly.
	(gdb-data-list-register-values-handler)
	(gdb-data-list-register-values-custom): Fontify buffer.

2005-11-16  Andrew Stubbs  <andrew.stubbs@st.com>

	* NEWS (6.4): Mention $argc.
	* cli/cli-script.c: Include gdb_assert.h.
	(locate_arg): Detect $argc.
	(insert_args): Substitute $argc.
	* Makefile.in (cli-script.o): Add dependency on gdb_assert.h.

2005-11-15  Andrew Stubbs  <andrew.stubbs@st.com>

	* NEWS: Add --batch-silent, --return-child-result, and --eval-command
	options to the 6.4 section.

2005-11-14  James E Wilson  <wilson@specifix.com>

	PR 2024
	* dwarf2loc.c (dwarf_expr_frame_base): Use get_frame_address_in_block
	instead of get_frame_pc.